estructura del portflio seccion 1

--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
     </section>
     <section class="seccion2">
         <div class="title-projects">
-            <h2>PROJECTS</h2>
-            <div class="underline"></div>
-            <span><p>here you will see all my works and you'll have access to the code with the github link</p></span>
+            <h3>My work</h3>
+            <p>Here are a few past design projects I've worked on</p>
         </div>
         <div class="container-projects">
 
