creo la rama develop

--- a/index.html
+++ b/index.html
@@ -54,13 +54,22 @@
     <section class="seccion2">
         <div class="title-projects">
             <h3>My work</h3>
-            <p>Here are a few past design projects I've worked on</p>
+            <p>Here are some projects I've worked on</p>
         </div>
         <div class="container-projects">
-
+            <div class="project">
+                <div class="title-project">
+                    <h1>Titulo Del Proyecto</h1>
+                    <span><p>Descripcion corta del proyecto</p></span>
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+            </div>
         </div>
     </section>
-    <div class="skills">
+    <!-- 
+        <div class="skills">
         <h2>Skills</h2>
         <div class="tecnologias">
             <h3>-PHP</h3>
@@ -75,5 +84,6 @@
             <h3>-JAVASCRIPT</h3>
         </div>
     </div>
+-->
 </body>
 </html>
