sigo trabajando, agrego y doy estilo a la seccion 2, algunas lves modificaciones

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="presentation"><div class="title-myinfo">
             <h2 class="animate__animated animate__zoomIn">Agustín Servín</h2>
             <h3 class="animate__animated animate__zoomIn">Web Developer</h3>
-        </div> <p class="animate__animated animate__zoomIn">Hey there! I'm Agustín, I'm a Junior fullstack developer. Welcome to my website, you can download my CV by clicking on the button</p>
+        </div> <p class="animate__animated animate__zoomIn">Hey there! I'm Agustín, a Junior developer from Argentina. I graduated as a Programming Technician at 'EEST N 5'. Welcome to my website, you can download my CV by clicking on the button</p>
         <div class="myinfo-button">
         <a download href="CV.pdf" onclick="cerrarmenu()"><button class="btn animate__animated animate__zoomIn">Download CV</button></a></div>
     </div>
@@ -59,8 +59,13 @@
         <div class="container-projects">
             <div class="project">
                 <div class="title-project">
-                    <h1>Titulo Del Proyecto</h1>
-                    <span><p>Descripcion corta del proyecto</p></span>
+                    <h1>Dealership</h1>
+                    <span>Technologies used: <p id="pcolor">PHP, MYSQL, GIT, POO, MVC, HTML, CSS</p>
+                            Init Date:<p id="pcolor">1/9/2022</p>
+                            Completion Date:<p id="pcolor">Currently</p>
+                            Description: <p>This project was a homework for my school "EEST N 5" where I graduated as "Técnico en Programacion". This dealership has a management website in a separate URL with login where the admin add, modify and delete the content of it
+                            </span>
+                    
                 </div>
                 <div class="img-project">
                         <img src="imagenes/project1.png">
